# esp32-s31

./: .gitignore  README.md  platformio.ini
boards/: esp32_s31_function_coreboard_1.json  esp32_s31_korvo_1.json
docs/: ai-home-architecture.md
idf/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
idf/main/: CMakeLists.txt  Kconfig.projbuild  OuORuntime.cpp  OuORuntime.h  idf_component.yml  led_strip_encoder.c  led_strip_encoder.h  ouo_assets.cpp  ouo_assets.h  ouo_s31_bringup.c  s31_ouo_renderer.cpp  s31_ouo_renderer.h
scripts/: build-idf.ps1  flash-monitor-idf.ps1  install-drivers-admin.ps1  preflight-s31.ps1  prepare-ai-home-lan.ps1  publish-ota.ps1  smoke-ai-home-backend.ps1  smoke-ai-home-closed-loop.ps1  smoke-ai-home-device.ps1  smoke-ai-home-serial.ps1  smoke-serial-s31.ps1
server/: Cargo.toml
server/ota/: manifest.json
server/src/: api.rs  emotion.rs  llm.rs  main.rs  state.rs  types.rs
server/static/: app.js  index.html  styles.css
